<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado">

    <TextView
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:text="Cancelar"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/diseno_dialogo"
        android:backgroundTint="@color/gray_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtras"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/btnRegister"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tvsloganLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/sloganRegister"
            android:textColor="@color/gray_700"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/tvUsuario"
            android:textColor="@color/gray_700"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvsloganLogin"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/bordes_editex"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/hintEmail"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/gray_700"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsuario"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/tvName"
            android:textColor="@color/gray_700"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsuario"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/bordes_editex"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/etName"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/gray_700"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:layout_constraintVertical_bias="0" />


        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="Correo"
            android:textColor="@color/gray_700"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNombre"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/bordes_editex"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/hintCorreo"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/gray_700"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCorreo"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tvContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/tvPass"
            android:textColor="@color/gray_700"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCorreo"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/bordes_editex"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/gray_700"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContrasena"
            app:layout_constraintVertical_bias="0" />


        <TextView
            android:id="@+id/tvConfirmarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/tvConfPass"
            android:textColor="@color/gray_700"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etContrasena"
            app:layout_constraintVertical_bias="0" />

        <EditText
            android:id="@+id/etConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/bordes_editex"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/hintPass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/gray_700"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirmarContrasena"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegistrar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/fondo_degradado"
            android:fontFamily="@font/poppins_bold"
            android:paddingHorizontal="100dp"
            android:text="@string/btnRegister"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmarContrasena"
            app:layout_constraintVertical_bias="0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>